VCSample/include/PortSIPLib/PortSIPLib.hxx


	int PortSIP_attendedRefer2(void * libSDK, long sessionId, long replaceSessionId, const char *  replaceMethod, const char * target, const char *  referTo);

	int PortSIP_outOfDialogRefer(void * libSDK, long replaceSessionId, const char * replaceMethod, const char * target, const char * referTo);

	long PortSIP_acceptRefer(void * libSDK, long referId, const char * referSignaling);

	int PortSIP_rejectRefer(void * libSDK, long referId);

	int PortSIP_muteSession(void * libSDK,
		long sessionId,
		bool muteIncomingAudio,
		bool muteOutgoingAudio,
		bool muteIncomingVideo,
		bool muteOutgoingVideo);


	int PortSIP_forwardCall(void * libSDK, long sessionId, const char * forwardTo);


	long PortSIP_pickupBLFCall(void * libSDK, const char * replaceDialogId, bool videoCall);

	int PortSIP_sendDtmf(void * libSDK, long sessionId, DTMF_METHOD dtmfMethod, int code, int dtmfDuration, bool playDtmfTone);


	int PortSIP_enableSendPcmStreamToRemote(void * libSDK, long sessionId, bool state, int streamSamplesPerSec);

	int PortSIP_sendPcmStreamToRemote(void * libSDK, long sessionId, const unsigned char * data, int dataLength);


	int PortSIP_enableSendVideoStreamToRemote(void * libSDK, long sessionId, bool state);

	int PortSIP_sendVideoStreamToRemote(void * libSDK, long sessionId, const unsigned char * data, int dataLength, int width, int height);



	int PortSIP_enableAudioStreamCallback(void * libSDK, int sessionId, bool enable, AUDIOSTREAM_CALLBACK_MODE callbackMode, void * obj, fnAudioRawCallback callbackFunc);

	int PortSIP_enableVideoStreamCallback(void * libSDK, int sessionId, VIDEOSTREAM_CALLBACK_MODE callbackMode, void * obj, fnVideoRawCallback callbackFunc);


	int PortSIP_startRecord(void * libSDK,
		long sessionId,
		const char * recordFilePath,
		const char * recordFileName,
		bool appendTimeStamp,
		AUDIO_FILE_FORMAT audioFileFormat,
		RECORD_MODE audioRecordMode,
		VIDEOCODEC_TYPE videoFileCodecType,
		RECORD_MODE videoRecordMode);


	int PortSIP_stopRecord(void * libSDK, long sessionId);


	int  PortSIP_playVideoFileToRemote(void * libSDK,
		long sessionId,
		const char * aviFile,
		bool loop,
		bool playAudio);


	int PortSIP_stopPlayVideoFileToRemote(void * libSDK, long sessionId);


	int PortSIP_playAudioFileToRemote(void * libSDK,
		long sessionId,
		const char * filename, // Support .wav, .amr and .pcm file formats
		int fileSamplesPerSec, // Must set fileSamplesPerSec for play .pcm file 
		bool loop);


	int PortSIP_stopPlayAudioFileToRemote(void * libSDK, long sessionId);


	int PortSIP_playAudioFileToRemoteAsBackground(void * libSDK, long sessionId, const char * filename, int fileSamplesPerSec);

	int PortSIP_stopPlayAudioFileToRemoteAsBackground(void * libSDK, long sessionId);


	int PortSIP_createAudioConference(void * libSDK);

	int PortSIP_createVideoConference(void * libSDK, void * conferenceVideoWindow, int width, int height, bool displayLocalVideoInConference);

	void PortSIP_destroyConference(void * libSDK);

	int PortSIP_setConferenceVideoWindow(void * libSDK, void * conferenceVideoWindow);

	int PortSIP_joinToConference(void * libSDK, long sessionId);

	int PortSIP_removeFromConference(void * libSDK, long sessionId);


	int PortSIP_setAudioRtcpBandwidth(void * libSDK, long sessionId, int BitsRR, int BitsRS, int KBitsAS);

	int PortSIP_setVideoRtcpBandwidth(void * libSDK, long sessionId, int BitsRR, int BitsRS, int KBitsAS);