CSharpSample_DLL/PortSIP/PortSIPNativeMethods.cs


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_attendedRefer2(IntPtr libSDK, 
                                                                Int32 sessionId,
                                                                Int32 replaceSessionId,
                                                                String replaceMethod,
                                                                String target,
                                                                String referTo);

      [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_outOfDialogRefer(IntPtr libSDK, Int32 replaceSessionId, String replaceMethod, String target, String referTo);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_acceptRefer(IntPtr libSDK, Int32 referId, String referSignaling);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_rejectRefer(IntPtr libSDK, Int32 referId);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_muteSession(IntPtr libSDK, 
                                                            Int32 sessionId,
                                                            [MarshalAs(UnmanagedType.I1)] Boolean muteIncomingAudio,
                                                            [MarshalAs(UnmanagedType.I1)] Boolean muteOutgoingAudio,
                                                            [MarshalAs(UnmanagedType.I1)] Boolean muteIncomingVideo,
                                                            [MarshalAs(UnmanagedType.I1)] Boolean muteOutgoingVideo);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_forwardCall(IntPtr libSDK, Int32 sessionId, String forwardTo);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_pickupBLFCall(IntPtr libSDK, String replaceDialogId, [MarshalAs(UnmanagedType.I1)] Boolean  videoCall);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_sendDtmf(IntPtr libSDK, 
                                                            Int32 sessionId, 
                                                            Int32 dtmfMethod,
                                                            Int32 code,
                                                            Int32 dtmfDuration,
                                                            [MarshalAs(UnmanagedType.I1)] Boolean playDtmfTone);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_enableSendPcmStreamToRemote(IntPtr libSDK,
                                                                           Int32 sessionId,
                                                                           [MarshalAs(UnmanagedType.I1)] Boolean state,
                                                                           Int32 streamSamplesPerSec);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_sendPcmStreamToRemote(IntPtr libSDK,
                                                                   Int32 sessionId,
                                                                   [MarshalAs(UnmanagedType.LPArray)] byte[] data,
                                                                   Int32 dataLength);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_enableSendVideoStreamToRemote(IntPtr libSDK,
                                                                           Int32 sessionId,
                                                                           [MarshalAs(UnmanagedType.I1)] Boolean state);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_sendVideoStreamToRemote(IntPtr libSDK,
                                                                   Int32 sessionId,
                                                                   [MarshalAs(UnmanagedType.LPArray)] byte[] data,
                                                                   Int32 dataLength,
                                                                   Int32 width,
                                                                   Int32 height);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_enableAudioStreamCallback(IntPtr libSDK,
                                                                           Int32 sessionId,
                                                                           [MarshalAs(UnmanagedType.I1)] Boolean enable,
                                                                           Int32 callbackMode,
                                                                           IntPtr callbackObject,
                                                                           audioRawCallback callbackHandler);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_enableVideoStreamCallback(IntPtr libSDK,
                                                                           Int32 sessionId,
                                                                           Int32 callbackMode,
                                                                           IntPtr callbackObject,
                                                                           videoRawCallback callbackHandler);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_startRecord(IntPtr libSDK,
                                                             Int32 sessionId,
                                                             String recordFilePath,
                                                             String recordFileName,
                                                             [MarshalAs(UnmanagedType.I1)] Boolean appendTimeStamp,
                                                             Int32 audioFileFormat,
                                                             Int32 audioRecordMode,
                                                             Int32 videoFileCodecType,
                                                             Int32 videoRecordMode);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_stopRecord(IntPtr libSDK, Int32 sessionId);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_playVideoFileToRemote(IntPtr libSDK,
                                                                Int32 sessionId,
                                                                String aviFile,
                                                                [MarshalAs(UnmanagedType.I1)] Boolean loop,
                                                                [MarshalAs(UnmanagedType.I1)] Boolean playAudio);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_stopPlayVideoFileToRemote(IntPtr libSDK, Int32 sessionId);



       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_playAudioFileToRemote(IntPtr libSDK,
                                                                 Int32 sessionId,
                                                                 String fileName,
                                                                 Int32 fileSamplesPerSec,
                                                                 [MarshalAs(UnmanagedType.I1)] Boolean loop);



       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_stopPlayAudioFileToRemote(IntPtr libSDK, Int32 sessionId);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_playAudioFileToRemoteAsBackground(IntPtr libSDK,
                                                                 Int32 sessionId,
                                                                 String fileName,
                                                                 Int32 fileSamplesPerSec);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_stopPlayAudioFileToRemoteAsBackground(IntPtr libSDK, Int32 sessionId);



       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_createAudioConference(IntPtr libSDK);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_createVideoConference(IntPtr libSDK,
                                                                   IntPtr conferenceVideoWindow,
                                                                   Int32 width,
                                                                   Int32 height,
                                                                   [MarshalAs(UnmanagedType.I1)] Boolean displayLocalVideoInConference);



       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern void PortSIP_destroyConference(IntPtr libSDK);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_joinToConference(IntPtr libSDK, Int32 sessionId);


       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_setConferenceVideoWindow(IntPtr libSDK, IntPtr videoWindow);

        
       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_removeFromConference(IntPtr libSDK, Int32 sessionId);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_setAudioRtcpBandwidth(IntPtr libSDK, 
                                                                      Int32 sessionId,
                                                                      Int32 BitsRR,
                                                                      Int32 BitsRS, 
                                                                      Int32 KBitsAS);

       [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static unsafe extern Int32 PortSIP_setVideoRtcpBandwidth(IntPtr libSDK,
                                                                      Int32 sessionId,
                                                                      Int32 BitsRR,
                                                                      Int32 BitsRS,
                                                                      Int32 KBitsAS);
